css/default.css
/* fonts */

@import url("https://fonts.googleapis.com/css2?family=Catamaran&family=Rubik:ital,wght@0,400;0,600&display=swap");

/* start main styles */

body {
    font-family: "Rubik", sans-serif;
    background: #333 url("../img/bg.jpg") no-repeat;
    background-position: center;
    background-attachment: fixed;
    color: #161717;
    font-weight: 400;
}

h1 {
    font-style: normal;
    font-weight: 600;
    font-size: 36px;
    line-height: 48px;
}

#todo {
    position: relative;
    margin: 80px auto 0 auto;
    padding: 48px;
    max-width: 712px;
    background: #fff;
    border-radius: 16px;
    box-shadow: 0 12px 20px 10px rgba(0, 0, 0, 0.05);
}

#add #submit {
    position: relative;
    width: 100%;
    border: 3px solid #bdbdbd;
    border-radius: 12px;
}

#add #submit input {
    width: 80%;
    border: none;
    outline: none;
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    padding: 15px 15px;
    background: transparent;
    color: #333333;
}

#add .btn {
    position: absolute;
    right: 10px;
    top: -6px;
    border: none;
    background: transparent;
    color: #29abe2;
    font-family: "Catamaran", sans-serif;
    font-size: 26pt;
}

#app {
    font-weight: 300;
    font-size: 32px;
}

#app ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

#app ul li {
    line-height: 38px;
    margin: 10px 0;
}

#app img {
    vertical-align: -15px;
}

#app label {
    margin: 0 20px;
}

#app label span {
    vertical-align: middle;
}

.delete {
    color: transparent;
    vertical-align: -1px;
    text-decoration: none;
    font-size: 20pt;
}

label:hover>.delete {
    color: #ff0000;
}


/* mobile @media query */

@media only screen and (max-width: 600px) {
    #add #submit input {
        width: 85%;
        padding: 15px 15px;
    }
}

